--- a/style.css
+++ b/style.css
@@ -14,3 +14,12 @@ h1 {
 h2 {
     font-size: 2.2em;
 }
+
+#hello {
+    color: red;
+}
+
+.burndown {
+    background: #424242;
+    padding: 10px;
+}
